@@ -1,18 +1,7 @@
 diff -Nur CMakeLists.txt.orig CMakeLists.txt
 --- CMakeLists.txt.orig	2008-10-03 12:25:41 -05:00
 +++ CMakeLists.txt	2008-09-26 17:32:51 -05:00
-@@ -97,6 +97,10 @@
- IF(CYBOZU)
-   ADD_DEFINITIONS(-DCYBOZU)
- ENDIF(CYBOZU)
-+# Checks for 32-bit version. And always use 32-bit time_t for compatibility
-+IF(CMAKE_GENERATOR MATCHES "Visual Studio" AND CMAKE_SIZEOF_VOID_P MATCHES 4)
-+  ADD_DEFINITIONS(-D_USE_32BIT_TIME_T)
-+ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio" AND CMAKE_SIZEOF_VOID_P MATCHES 4)
- 
- # in some places we use DBUG_OFF
- SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DDBUG_OFF")
-@@ -246,9 +250,9 @@
+@@ -244,9 +244,9 @@
  IF(WITH_FEDERATED_STORAGE_ENGINE)
    ADD_SUBDIRECTORY(storage/federated)
  ENDIF(WITH_FEDERATED_STORAGE_ENGINE)
@@ -149,7 +138,7 @@ diff -Nur sql/mysqld.def.orig sql/mysqld.def
 +	localtime_r
 +	my_strdup
 
-diff -Nur ../old/sql/mysqld_x64.def.orig ./sql/mysqld_x64.def
+diff -Nur sql/mysqld_x64.def.orig sql/mysqld_x64.def
 --- sql/mysqld_x64.def.orig	1969-12-31 18:00:00 -06:00
 +++ sql/mysqld_x64.def		2008-10-31 02:22:04 -05:00
 @@ -0,0 +1,99 @@
